tests/ok/neg_coord.tst
123
#rooms
room0 0 12
##end
end 0 0
room1 1 -11
room2 2 10
#start
start 1 1
room5 10 10
#links
end-start
end-room0
end-room1
end-room2
room2-start
room2-room0
room0-room1
start-room1
