tests/error/negativ-ant-qty.tst
-122
#rooms
room0 0 3
##start
start 1 1
room1 2 2
room2 3 3
room3 4 4
##end
end 1 2
room4 2 3
room5 3 2
#tubes
start-room0
start-room1
room2-room0
end-start
end-room2
end-room0
